trying to fix word spacing issue on android

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -512,6 +512,7 @@ article.faq {
     margin-top: 2rem;
     display: none;
     color: black;
+    white-space: normal;
   }
   .faq-card {
     margin-top: 4rem;
